# fathomx

./: .env.example  .gitignore  .markdownlint.json  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  ROADMAP.md  install.js  install.sh  lapis.example.toml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.m4-run/: .gitignore  build_aspect_smoke.py  build_deep_golden.py  build_failed_aspects.py  golden-report-strava.md  m4-findings.md  m4-rubric-score.md  mcp_call.py  merge_six.py  upstream-issue.md
crates/lapis-cli/: Cargo.toml
crates/lapis-cli/src/: main.rs
crates/lapis-config/: Cargo.toml
crates/lapis-config/src/: lib.rs  limit.rs  loader.rs  types.rs
crates/lapis-core/: Cargo.toml
crates/lapis-core/src/: error.rs  lib.rs  logging.rs
crates/lapis-core/src/config/: loader.rs
crates/lapis-core/src/mcp/: mod.rs  server.rs  tools.rs
crates/lapis-core/src/model/: provider.rs  service.rs
crates/lapis-core/src/model/provider/: openai.rs
crates/lapis-core/src/net/: client.rs  mod.rs  policy.rs  reqwest_client.rs
crates/lapis-core/src/orchestrator/: agent_loop.rs  budget.rs  mod.rs  tool_policy.rs  validator.rs  workflow.rs
crates/lapis-core/src/schema/: budget.rs  config.rs  limit.rs  mcp.rs  mod.rs  model.rs  network.rs  policy.rs  report.rs  research.rs  search.rs
crates/lapis-core/src/search/: provider.rs  service.rs
crates/lapis-core/src/search/provider/: exa.rs  grok.rs
crates/lapis-error/: Cargo.toml
crates/lapis-error/src/: lib.rs
crates/lapis-mcp/: Cargo.toml
crates/lapis-mcp/src/: envelope.rs  lib.rs  server.rs  tools.rs
crates/lapis-model/: Cargo.toml
crates/lapis-model/src/: lib.rs  openai.rs  provider.rs  service.rs  types.rs
crates/lapis-net/: Cargo.toml
crates/lapis-net/src/: client.rs  lib.rs  policy.rs  provider_http.rs  reqwest_client.rs  types.rs
crates/lapis-search/: Cargo.toml
crates/lapis-search/src/: lib.rs  provider.rs  service.rs  types.rs
crates/lapis-search/src/provider/: exa.rs  grok.rs
crates/lapis-tests/: Cargo.toml
crates/lapis-tests/fixtures/prompts/: task_decomposition_valid.json
crates/lapis-tests/tests/: config_tests.rs  deep_research_tests.rs  mcp_tests.rs  model_tests.rs  network_policy_tests.rs  orchestrator_tests.rs  policy_validator_tests.rs  schema_tests.rs  search_tests.rs  wire_trace_tests.rs
crates/lapis-tests/tests/support/: mod.rs  network.rs  research.rs
crates/lapis-workflow/: Cargo.toml
crates/lapis-workflow/src/: agent_loop.rs  budget.rs  lib.rs  limit.rs  policy.rs  report.rs  research.rs  runtime_budget.rs  tool_policy.rs  validator.rs  workflow.rs
docs/: Lapis 业务层补充文档：Product Deep Research 模式.md  README.md  architecture.md  configuration.md  development.md  fathomx-business-input-to-lapis.md  fathomx-business-supplement.md  lapis-migration-audit.md  mcp-usage.md  prompt-engineering-academic-foundations.md  research-agent-product.md
docs/archive/: README.md
docs/decisions/: 0001-adopt-lapis-engine.md  0002-fathomx-lapis-decoupled.md  0002-pm-deep-research-lapis-decoupled.md  0003-first-capability-competitive.md  0004-public-oss-distribution.md  0005-agpl-license.md  0006-phase1-method-decisions.md  README.md
docs/evaluation/: rubric.md
docs/evaluation/golden/: running-coach-ai-upgrade.md
docs/plans/: README.md  phase1-method-decisions.md  phase1-review.md  phase2-spec-and-orchestration.md  phase3-skill-orchestration.md
docs/research/: README.md  citation-audit.md  track-a-orchestration-credibility.md  track-b-product-methodology.md
docs/research/_raw/: a-verify-and-budget.md  b1-competitive-research.md  b2-requirement-methodology.md  b3-product-expert-thinking.md
docs/spec/: fathomx-competitive-research-spec.md
docs/specs/: fathomx-competitive-research-spec.md  orchestration-interface.md  pm-deep-research-competitive-research-spec.md  search-parameter-strategy.md
mcp-setup/: exa.sh  grok-search.sh  uninstall.sh
orchestrator/: README.md  pyproject.toml
orchestrator/src/deep_research/: __main__.py  client.py  config.py  config_schema.py  workspace.py
orchestrator/src/deep_research/tasks/: analyze.py  compress.py  gemini_search.py
orchestrator/src/deep_research/tui/screens/: search_config.py  summary.py  welcome.py
orchestrator/src/deep_research/tui/widgets/: key_input.py
orchestrator/src/deep_research/utils/: api_test.py  slug.py
orchestrator/src/fathomx/: __init__.py  __main__.py  client.py  config.py  config_schema.py  workspace.py
orchestrator/src/fathomx/tasks/: analyze.py  compress.py  gemini_search.py  search_extract.py
orchestrator/src/fathomx/tui/: app.py
orchestrator/src/fathomx/tui/screens/: model_config.py  validate.py
orchestrator/src/fathomx/utils/: api_test.py
orchestrator/tests/: conftest.py  test_config.py  test_workspace.py
prompts/layer1/: final-report.md  task-decomposition.md
prompts/layer2/: aspect-agent.md  evidence-extractor.md  search-planner.md
shared-keys/: .gitignore  README.md
skill/: SKILL.md
skill/references/: academic-search.md  browser-layer.md  gemini-search.md  methodology.md  native-compat.md  orchestrator-protocol.md  report-format.md  strategy.md
skill/templates/: deep-report.md  quick-report.md  standard-report.md
skills/: deep-research.md
skills/pm-deep-research/: SKILL.md
skills/pm-deep-research/prompts/layer1/: agent-allocation.md  claude-only-degradation.md  evidence-postprocess.md  final-report.md  task-decomposition.md
skills/pm-deep-research/prompts/layer2/: persona-experience-analyst.md  persona-strategist.md
