[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fathomx"
version = "1.2.0"
description = "Multi-model orchestrator for FathomX deep research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "textual>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
fathomx-setup = "fathomx.tui.app:run_setup"

[tool.hatch.build.targets.wheel]
packages = ["src/fathomx"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
