[package]
name = "lapis-config"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "lapis_config"
path = "src/lib.rs"

[dependencies]
lapis-error = { path = "../lapis-error" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
snafu.workspace = true
toml.workspace = true
