[package]
name = "lapis-core"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "lapis_core"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, features = ["server", "transport-io", "schemars"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
