[package]
name = "lapis-net"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "lapis_net"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
lapis-error = { path = "../lapis-error" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
