[package]
name = "lapis-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
lapis-core = { path = "../lapis-core" }
rmcp.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
