[package]
name = "lapis-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
lapis-config = { path = "../lapis-config" }
lapis-error = { path = "../lapis-error" }
lapis-mcp = { path = "../lapis-mcp" }
lapis-model = { path = "../lapis-model" }
lapis-net = { path = "../lapis-net" }
lapis-search = { path = "../lapis-search" }
lapis-workflow = { path = "../lapis-workflow" }
rmcp.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
